# sdfk-backend-pub

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  cleanup.sh  clear.sh  codex.sh  conftest.py  docker-compose.yml  lint.sh  local.sh  notes.txt  nuke.sh  package.json  preflight.sh  pyproject.toml  pytest.ini  requirements.txt  run_agent_tests.py  test.sh  test_debug_handler.py
_prompts/: doc_refresh.json  rule_bundle_refactor.json
alembic/: env.py
app/: __init__.py  cache.py  config.py  constants.py  curves.py  env.py  error_handlers.py  errors.py  file_diagnostics.py  load_examples.py  logging.py  main.py  schema_version.py  security.py
app/api/: __init__.py  errors.py
app/examples/: Shader_Example.json  SynestheticAsset_Example1.json  SynestheticAsset_Example2.json  SynestheticAsset_Example3.json  SynestheticAsset_Example4.json  SynestheticAsset_Example5.json  SynestheticAsset_Example6.json  SynestheticAsset_Example7.json  SynestheticAsset_Example8.json  SynestheticAsset_Example9.json  loader.py
app/middleware/: request_id.py
app/models/: __init__.py  asset_embedding.py  control.py  db.py  haptic.py  item.py  mcp_command.py  modulation.py  patch_embedding.py  patch_index.py  proto_asset.py  (+8 more)
docs/: SSOT_AUDIT.md  _contrib.md  _openapi.json  _routes.md  db_schema.md  index.md
protos/: asset.proto
scripts/: codex_extract_diffs.py  docops.js  dump_routes.py  export_schemas.py  import_rule_bundles.py  route_audit.py  validate_codex_stack_output.py  validate_docs_integrity.py
tests/: TESTS.README.md  conftest.py  test_load_examples.py
tools/: check_500_responses.py  generate_db_docs.py
(+157 files in other folders)
